--- a/domaci/HTML/index.html
+++ b/domaci/HTML/index.html
@@ -5,7 +5,7 @@
           <meta http-equiv="X-UA-Compatible" content="IE=edge">
           <meta name="viewport" content="width=, initial-scale=1.0">
                <title>HTML Novak</title>
-          <link rel="stylesheet" href="./CSS/style.css">
+          <link rel="stylesheet" href="../CSS/style.css">
       </head>
 
       <body>
@@ -23,7 +23,7 @@
           </header>
 
           <main>
-                <h2>
+                <h2 class="title">
                   Novak topples Berankis to reach second week in Paris
                 </h2>
 
@@ -66,7 +66,7 @@
 
           <footer>
 
-                 <ol>
+                 <ul class='links'>
                       <li>
                           <a
                             href="https://www.skysports.com/tennis/news/32455/12325588/french-open-novak-djokovic-creates-history-as-he-reaches-round-four-at-roland-garros"
@@ -86,7 +86,7 @@
                             href="https://en.wikipedia.org/wiki/2021_Novak_Djokovic_tennis_season" target="_blank">Contact
                            </a>
                       </li>
-                 </ol>
+                 </ul>
           </footer>
       </body>
 </html>
